k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banco-api-service
  namespace: default
  labels:
    app: banco-api
spec:
  selector:
    app: banco-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
