k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banco-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: banco.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banco-api-service
                port:
                  number: 8000
